# folder_dict

./: README.md  pyproject.toml
folder_dict/: __init__.py
tests/: test_folder_dict.py
