[tool.poetry]
name = "folder_dict"
version = "0.1.1"
description = ""
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
path-dict = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
