[tool.poetry]
name = "folder_dict"
version = "0.1.1"
repository = "https://github.com/Geson-anko/folder_dict"
description = "TThe versatile dict for Python!"
authors = ["Yasuhiro Shimomura <22shimoyasu22@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
[tool.poetry.dependencies]
python = "^3.9"
path-dict = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
